# YKC16

./: .gitattributes  .gitignore  AGENTS.md  README.md  cui.pro  feemodel.db  tcu_meter.ini  test_main.cpp
app/: run.sh
config/: Untitled  daemon.ini  logger.ini  pile_controller.ini  tcu_card.ini  tcu_comm.ini  tcu_comm_guangxidky.ini  tcu_comm_zhongshihua2.ini  tcu_hmi.ini  tcu_logic.ini  tcu_meter.ini  tcu_uploader.ini  version.json
core/: chargerecords.db  cui.ini  feemodel.db
core/hmi/Zhongshihua2.0/: A3_REFACTOR_PLAN.md  CMakeLists.txt  README.md  cellwidget.h  customwidgets.cpp  customwidgets.h  exportprogressdlg.cpp  exportprogressdlg.h  hmi_window.cpp  hmi_window.h  main.cpp  runtime_window.cpp  runtime_window.h  tcu_hmi.pro  tcu_hmi.qrc  uipages.cpp  uipages.h
core/hmi/Zhongshihua2.0/styles/: cui.qss
core/hmi/Zhongshihua2.0/ui/: a3about.ui  b1idle.ui  e1chargeinfo.ui  numinputdlg.ui  s2stopping.ui
data/: chargerecords.db  feemodel.db  tcu.db
docs/: ARCHITECTURE_DESIGN.md  DEVELOPMENT_PLAN.md  EMBEDDED_MICROSERVICE_ARCHITECTURE.md  FAULT_REASON_POINT_TABLE_PLAN.md  MQTT_PROTOCOL_STACK_OVERVIEW.md  NEXT_STEPS.md  PROGRESS_UPDATE.md  README.md  REFACTOR_PLAN.md  REFACTOR_SUMMARY.md  REVIEW_OVERVIEW_DESIGN.md  SOFTWARE_OVERVIEW_DESIGN.md  TCU充电计费单元概要设计.docx  TCU充电计费单元概要设计.md  V2G_vs_EVS_COMPARISON.md  VIN_MQTT_TESTUSE_SHM.md  fault_reason_mapper_故障映射表.csv  fault_reason_mapper_故障映射表.xlsx  libv2gshm_USAGE.md  virtualPlug_pile_controller_sim_spec.md  平台通信详细设计-中石化2.0_远洋V2_33007V2.docx  平台通信详细设计-中石化2.0与远洋V2.docx  概要设计模板.docx
hello_world_5s/: Makefile.cross  (+2 more)
(+951 files in other folders)
